modified to new postgres db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=${SERVER_PORT:5454}
 
 # PostgreSQL Database connection settings
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://your-db-host/food_db?sslmode=require}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://ep-jolly-cherry-a596aopn.us-east-2.aws.neon.tech/food_db?sslmode=require}
 spring.datasource.username=${DATABASE_USERNAME:food_db_owner}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
