--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application Name and Server Port
-server.port=${SERVER_PORT:5454}
+server.port=${SERVER_PORT:8080}
 
 # PostgreSQL Database connection settings
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://ep-jolly-cherry-a596aopn.us-east-2.aws.neon.tech/food_db?sslmode=require}
@@ -12,6 +12,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.open-in-view=false
+
 
 # Stripe API Keys
 stripe.api.key=${STRIPE_API_KEY}
